Kevin Perez: Arreglando conflicto entre los archivos tras la reorganizacion del sistema de carpetas

--- a/Finaizen/src/components/sidebar_user.html
+++ b/Finaizen/src/components/sidebar_user.html
@@ -20,7 +20,7 @@
 
   <div class="sidebar-footer">
     <div class="user">
-      <img src="../assets/user.png" alt="Ícono de Usuario" />
+      <img src="../../assets/user.png" alt="Ícono de Usuario" />
       <p>Kevin Perez</p>
     </div>
   </div>
