--- a/Finaizen/src/components/sidebar_admin.html
+++ b/Finaizen/src/components/sidebar_admin.html
@@ -6,13 +6,13 @@
 
   <nav class="sidebar-nav">
     <ul>
-      <li><a href="#">Dashboard</a></li>
-      <li><a href="#">Inteligencia de mercado</a></li>
-      <li><a href="#">Supervisión de categorías (IA)</a></li>
-      <li><a href="#">Reportes de Soporte</a></li>
-      <li><a href="#">Registro de Seguridad</a></li>
-      <li><a href="#">Gestión de usuarios</a></li>
-      <li><a href="#">Gestión de roles</a></li>
+      <li><a href="dashboard.html">Dashboard</a></li>
+      <li><a href="inteligencia-mercado.html">Inteligencia de mercado</a></li>
+      <li><a href="supervision-categorias.html">Supervisión de categorías (IA)</a></li>
+      <li><a href="reportes-soporte.html">Reportes de Soporte</a></li>
+      <li><a href="registro-seguridad.html">Registro de Seguridad</a></li>
+      <li><a href="gestion-usuarios.html">Gestión de usuarios</a></li>
+      <li><a href="gestion-roles.html">Gestión de roles</a></li>
     </ul>
   </nav>
 
