Cambio de nombres en el sidebar

--- a/Finaizen/src/components/sidebar_user.html
+++ b/Finaizen/src/components/sidebar_user.html
@@ -21,7 +21,7 @@
   <div class="sidebar-footer">
     <div class="user">
       <img src="../../assets/user.png" alt="Ícono de Usuario" />
-      <p>Kevin Perez</p>
+      <p>Kevin Perez, Xavier Espinel, Karen Tenorio</p>
     </div>
   </div>
 </aside>
