sidebar_user cambio del ícono

--- a/Finaizen/src/components/sidebar_user.html
+++ b/Finaizen/src/components/sidebar_user.html
@@ -20,7 +20,7 @@
 
   <div class="sidebar-footer">
     <div class="user">
-      <img src="../../assets/user.png" alt="Ícono de Usuario" />
+      <img src="https://placehold.co/40x40/6c757d/ffffff?text=X" alt="Ícono de Usuario" />
       <p>Kevin Perez, Xavier Espinel, Karen Tenorio</p>
     </div>
   </div>
