Cambios aplicados sobre sidebar de admin y de user

--- a/Finaizen/src/components/sidebar_user.html
+++ b/Finaizen/src/components/sidebar_user.html
@@ -6,10 +6,10 @@
 
   <nav class="sidebar-nav">
     <ul>
-      <li><a href="#">Dashboard</a></li>
-      <li><a href="#">Administrador ingresos/egresos</a></li>
-      <li><a href="#">Plan de Ahorros</a></li>
-      <li><a href="#">Ajuste de presupuestos</a></li>
+      <li><a href="dashboard.html">Dashboard</a></li>
+      <li><a href="administrar_registros.html">Administrador ingresos/egresos</a></li>
+      <li><a href="plan_ahorro.html">Plan de Ahorros</a></li>
+      <li><a href="presupuestos.html">Ajuste de presupuestos</a></li>
       <li><a href="#">Planificador de deudas</a></li>
       <li><a href="#">Logros</a></li>
       <li><a href="#">Cambiar Perfil</a></li>
