Mockup restantes y Referencia a las paginas

--- a/Finaizen/src/components/sidebar_admin.html
+++ b/Finaizen/src/components/sidebar_admin.html
@@ -18,7 +18,13 @@
 
   <div class="sidebar-footer">
     <div class="user">
-      <img src="https://placehold.co/40x40/6c757d/ffffff?text=A" alt="Ícono de Usuario" />
+      <a href="dashboard.html">
+      <img
+        src="https://placehold.co/40x40/6c757d/ffffff?text=X"
+        alt="Ícono de Usuario"
+        style="cursor: pointer;"
+      />
+    </a>
       <p>Admin</p>
     </div>
   </div>
