--- a/Finaizen/src/components/sidebar_user.html
+++ b/Finaizen/src/components/sidebar_user.html
@@ -11,7 +11,7 @@
       <li><a href="plan_ahorro.html">Plan de Ahorros</a></li>
       <li><a href="presupuestos.html">Ajuste de presupuestos</a></li>
       <li><a href="planificador_deudas.html">Planificador de deudas</a></li>
-      <li><a href="logros.html">Logros</a></li>
+      <li><a href="logros.html">Logros y Recompensas</a></li>
       <li><a href="config_perfiles.html">Cambiar Perfil</a></li>
       <li><a href="config_cuenta.html">Configuración de Cuenta</a></li>
       <li><a href="config_ayuda.html">Ayuda</a></li>
