Kevin Perez: Cambio en la visualizacion del nombre de usuario

--- a/Finaizen/src/components/sidebar_menu.html
+++ b/Finaizen/src/components/sidebar_menu.html
@@ -3,7 +3,7 @@
   <div class="dropdown-header">
     <img src="https://placehold.co/50x50/6c757d/ffffff?text=U" alt="Avatar" id="dropdown-avatar">
     <div class="user-info">
-      <p class="user-name" id="dropdown-username">Usuario</p>
+      <p class="user-name" id="dropdown-username">Kevin Perez</p>
       <p class="user-email" id="dropdown-email">usuario@finaizen.com</p>
     </div>
   </div>
