Kevin Perez: Agregando autenticacion para acceso a los distintos archivos de User/Admin mediante autenticacion y manejo de sesiones

--- a/Finaizen/src/components/sidebar/sidebar_menu.html
+++ b/Finaizen/src/components/sidebar/sidebar_menu.html
@@ -40,7 +40,7 @@
     </li>
     <li class="divider"></li>
     <li>
-      <a href="../Base/index.html" class="logout-link">
+      <a href="#" class="logout-link" id="logout-btn" onclick="handleLogout(event)">
         <span class="icon">🚪</span>
         <span class="text">Cerrar Sesión</span>
       </a>
