--- a/Finaizen/src/components/sidebar/sidebar_config.html
+++ b/Finaizen/src/components/sidebar/sidebar_config.html
@@ -22,7 +22,7 @@
         src="https://placehold.co/40x40/6c757d/ffffff?text=U"
         alt="Ícono de Usuario"
       />
-      <p>Kevin Perez, Xavier Espinel, Karen Tenorio</p>
+      <p>Kevin Perez  </p>
     </div>
     
     <!-- El menú flotante se cargará aquí -->
