--- a/Finaizen/React/Proyecto_Finaizen/src/components/forms/TransactionForm/TransactionForm.module.css
+++ b/Finaizen/React/Proyecto_Finaizen/src/components/forms/TransactionForm/TransactionForm.module.css
@@ -7,17 +7,25 @@
 
 .mainContent {
   flex: 1;
-  margin-left: 250px;
+  margin-left: 0;
   padding: 2rem;
-  width: calc(100% - 250px);
+  width: 100%;
   min-width: 0;
   box-sizing: border-box;
   transition: margin-left 0.3s ease, width 0.3s ease;
 }
 
-.mainContent.collapsed {
-  margin-left: 80px;
-  width: calc(100% - 80px);
+/* Solo en desktop aplicar margin */
+@media (min-width: 1025px) {
+  .mainContent {
+    margin-left: 250px;
+    width: calc(100% - 250px);
+  }
+
+  .mainContent.collapsed {
+    margin-left: 80px;
+    width: calc(100% - 80px);
+  }
 }
 
 .loading {
