--- a/Finaizen/React/Proyecto_Finaizen/src/pages/User/AdministrarRegistros/AdministrarRegistros.module.css
+++ b/Finaizen/React/Proyecto_Finaizen/src/pages/User/AdministrarRegistros/AdministrarRegistros.module.css
@@ -8,9 +8,9 @@
 
 .mainContent {
   flex: 1;
-  margin-left: 250px;
+  margin-left: 0;
   padding: 0;
-  width: calc(100% - 250px);
+  width: 100%;
   min-width: 0;
   box-sizing: border-box;
   transition: margin-left 0.3s ease, width 0.3s ease;
@@ -19,13 +19,8 @@
   align-items: center;
 }
 
-.mainContent.collapsed {
-  margin-left: 80px;
-  width: calc(100% - 80px);
-}
-
 .loadingContainer {
-  margin-left: 250px;
+  margin-left: 0;
   padding: 3rem;
   text-align: center;
   color: #6b7280;
@@ -33,8 +28,25 @@
   transition: margin-left 0.3s ease;
 }
 
-.loadingContainer.collapsed {
-  margin-left: 80px;
+/* Solo en desktop aplicar margin */
+@media (min-width: 1025px) {
+  .mainContent {
+    margin-left: 250px;
+    width: calc(100% - 250px);
+  }
+
+  .mainContent.collapsed {
+    margin-left: 80px;
+    width: calc(100% - 80px);
+  }
+
+  .loadingContainer {
+    margin-left: 250px;
+  }
+
+  .loadingContainer.collapsed {
+    margin-left: 80px;
+  }
 }
 
 /* Gestor de Registros (Tarjeta Principal) */
