Kevin Perez: Se implemento las componentes para el apartado de la configuracion: - Configuracion de usuario - Configuracion de seguridad - Configuracion de perfiles - Configuracion de notificaciones - Reportes y soporte Al igual que mejorando algunas de las componentes principales del usuario. Ademas, se fue verificando que se corrigan errores en cuanto al registro de ingresos y egresos.

--- a/Finaizen/React/Proyecto_Finaizen/src/components/forms/TransactionForm/TransactionForm.module.css
+++ b/Finaizen/React/Proyecto_Finaizen/src/components/forms/TransactionForm/TransactionForm.module.css
@@ -522,6 +522,12 @@
 
   .formActions {
     flex-direction: column;
+    align-items: center;
+  }
+
+  .formActions button {
+    width: 100%;
+    max-width: 300px;
   }
 
   .monthDaySelector {
